--- a/css/styletask3.css
+++ b/css/styletask3.css
@@ -306,7 +306,7 @@ body {
 /*---------- Responsive Grid Ends ---------------*/
 footer {
 	text-align: center;
-	color: green;
+	color: rgb(66, 29, 58);
 	font-size: 1.2em
 }
 
